CKAD/busyPvc.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: busy-pvc
  name: busy-pvc
spec:
  volumes:
    - name: pv-storage
      persistentVolumeClaim:
        claimName: mypvc-busy
  containers:
  - args:
    - /bin/sh
    - -c
    - sleep 3600
    image: busybox
    name: busy-pvc
    resources: {}
    volumeMounts:
      - mountPath: /etc/foo
        name: pv-storage
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
