CKAD/multiContainer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multicontainer
  labels:
    app: multicontainer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: multicontainer
  template:
