CKAD/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  creationTimestamp: null
  labels:
    run: nginx
    environment: prod
    tier: backend
    type: webserver
    app: nginx
  annotations:
    imageregistry: "k8s.registry.riecks.io"
    branch: master
spec:
  replicas: 3
  selector:
    matchLabels:
      run: nginx
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: nginx
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
status: {}
