CKAD/nginxProbes.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx-probe
  name: nginx-probe
spec:
  containers:
  - image: nginx
    name: nginx-probe
    ports:
      - containerPort: 80
    resources: {}
    readinessProbe:
      httpGet:
        path: /
        port: 80
    livenessProbe:
      exec:
        command:
          - ls
      initialDelaySeconds: 5
      periodSeconds: 10
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
