CKAD/nginxSecurity.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-sec
  creationTimestamp: null
spec:
  serviceAccountName: myuser
  securityContext:
    runAsUser: 101
  containers:
    - image: nginx
      name: nginx
      securityContext:
        capabilities:
          add: ["NET_ADMIN", "SYS_TIME"]
      resources: {}
status: {}
