CKAD/nodeSelector.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx3
  name: nginx3
spec:
  nodeSelector:
    accelerator: nvidia-tesla-p100
  containers:
  - image: nginx
    name: nginx3
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
